# wgpu-text-editor

./: Cargo.toml
.cargo/: config.toml
src/: bind_group.rs  lib.rs  main.rs  math.rs  shader.wgsl  widgets.rs
