[package]
name = "wgpu-text-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.11.3"
log = "0.4.21"
smol = "2.0.0"
wgpu = "0.19.3"
winit = "0.29.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wgpu = {version = "0.19.3", features = ["webgl"]}
console_log = "1.0.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }
